--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "accentColor": "#ec659b",
-  "cssTheme": "Things",
+  "cssTheme": "Red Graphite",
   "interfaceFontFamily": "",
   "monospaceFontFamily": "Victor Mono",
   "theme": "obsidian",
