--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,3 +1,6 @@
 {
-  "showInlineTitle": true
+  "showInlineTitle": true,
+  "alwaysUpdateLinks": true,
+  "showUnsupportedFiles": true,
+  "newFileLocation": "current"
 }
